--- a/report/main.bib
+++ b/report/main.bib
@@ -1,3 +1,24 @@
+@article{lecun2015,
+  title={Deep learning},
+  author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  journal={nature},
+  volume={521},
+  number={7553},
+  pages={436},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{schmidhuber2015,
+  title={Deep learning in neural networks: An overview},
+  author={Schmidhuber, J{\"u}rgen},
+  journal={Neural networks},
+  volume={61},
+  pages={85--117},
+  year={2015},
+  publisher={Elsevier}
+}
+
 @article{lee2015,
   author    = {Dong{-}Hyun Lee and
                Saizheng Zhang and
