--- a/workspace_guergiev.ipynb
+++ b/workspace_guergiev.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "The line_profiler extension is already loaded. To reload it, use:\n",
+      "  %reload_ext line_profiler\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -73,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,12 +94,12 @@
     "from utils.plotting import *\n",
     "\n",
     "# Guergiev et al (2017) - Segregated Compartments DNN Learning\n",
-    "import models.CompDNN as cdl"
+    "from models.CompDNN import CompDNN, eval_comp_dnn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -116,9 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 1, 28, 28) (60000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# MNIST dataset\n",
     "X_mnist, y_mnist = get_data(num_samples=70000, dataset=\"mnist\")\n",
@@ -127,39 +145,18 @@
     "                                                    stratify=y_mnist,\n",
     "                                                    random_state=0,\n",
     "                                                    test_size=1./7)\n",
-    "# silence 80% of feedback weights\n",
-    "cdl.use_sparse_feedback = False\n",
     "\n",
     "# set training parameters\n",
     "f_etas = (0.21, 0.21)\n",
     "b_etas = None\n",
     "n_epochs = 10\n",
-    "n_training_examples = X_train.shape[1]\n",
     "\n",
     "n=(500, 10)\n",
-    "# create the network -- this will also load the MNIST dataset files\n",
-    "net = cdl.Network(n, X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train| epoch  1| batch 5000/47995| acc: 0.8244| loss: 4.1914| time: 50.13\n",
-      "Valid| epoch  1| batch 5000/47995| acc: 0.8235| loss: 4.1958| time: 9.41\n",
-      "-------------------------------------------------------------------------\n",
-      "Train| epoch  1| batch 10000/47995| acc: 0.8867| loss: 2.8770| time: 49.70\n"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
+    "net = CompDNN(n, X_train, y_train)\n",
+    "\n",
     "net.train(f_etas, b_etas, n_epochs,\n",
-    "          log_freq=5000, verbose=True, logging=True)"
+    "          log_freq=5000, verbose=True, logging=True, dataset=\"mnist\")"
    ]
   },
   {
@@ -186,21 +183,18 @@
     "                                                    stratify=y_fashion,\n",
     "                                                    random_state=0,\n",
     "                                                    test_size=1./7)\n",
-    "# silence 80% of feedback weights\n",
-    "cdl.use_sparse_feedback = False\n",
     "\n",
     "# set training parameters\n",
     "f_etas = (0.21, 0.21)\n",
     "b_etas = None\n",
     "n_epochs = 10\n",
-    "n_training_examples = X_train.shape[1]\n",
     "\n",
     "n=(500, 10)\n",
-    "# create the network -- this will also load the MNIST dataset files\n",
-    "net = cdl.Network(n, X_train, y_train)\n",
+    "\n",
+    "net = CompDNN(n, X_train, y_train)\n",
     "\n",
     "net.train(f_etas, b_etas, n_epochs,\n",
-    "          log_freq=5000, verbose=True, logging=True)"
+    "          log_freq=5000, verbose=True, logging=True, dataset=\"fashion\")"
    ]
   },
   {
@@ -228,20 +222,16 @@
     "                                                    random_state=0,\n",
     "                                                    test_size=1./7)\n",
     "\n",
-    "# silence 80% of feedback weights\n",
-    "cdl.use_sparse_feedback = False\n",
-    "\n",
     "# set training parameters\n",
     "f_etas = (0.21, 0.21)\n",
     "b_etas = None\n",
     "n_epochs = 10\n",
-    "n_training_examples = X_train.shape[1]\n",
     "\n",
     "n=(500, 10)\n",
-    "net = cdl.Network(n, X_train, y_train)\n",
+    "net = CompDNN(n, X_train, y_train)\n",
     "\n",
     "net.train(f_etas, b_etas, n_epochs,\n",
-    "          log_freq=5000, verbose=True, logging=True)"
+    "          log_freq=5000, verbose=True, logging=True, dataset=\"cifar10\")"
    ]
   },
   {
@@ -253,6 +243,111 @@
     "X_test, y_test = prep_data_guergiev(X_test, y_test)\n",
     "acc, loss = net.get_test_error(X_test, y_test)\n",
     "print(\"Test Accuracy CIFAR-10: {}\".format(acc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bayesian Optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset: mnist\n",
+      "Learning Rate Weights: (0.21, 0.21)\n",
+      "Architecture of Cross-Validated Network:\n",
+      "\t Layer 0: 500 Units\n",
+      "\t Layer 1: 10 Units\n",
+      "Cross-Validation Score Fold 1: 0.9425351388412753\n",
+      "Cross-Validation Score Fold 2: 0.9206702952899327\n",
+      "Cross-Validation Score Fold 3: 0.9402083065449403\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9344712468920494"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_comp_dnn(\"mnist\", f_etas, b_etas, num_layers=1,\n",
+    "              h_l_1=500, h_l_2=0, h_l_3=0, h_l_4=0, h_l_5=0, h_l_6=0,\n",
+    "              num_epochs=2, k_fold=3, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run Bayesian Optimization (UCB-Acquisition Fct) on DNN\n",
+    "hyper_space_comp_dnn = {'batch_size': (10, 500),\n",
+    "                        'learning_rate': (0.01, 0.5),\n",
+    "                        'num_layers': (1, 6),\n",
+    "                        'h_l_1': (30, 500),\n",
+    "                        'h_l_2': (30, 500),\n",
+    "                        'h_l_3': (30, 500),\n",
+    "                        'h_l_4': (30, 500),\n",
+    "                        'h_l_5': (30, 500),\n",
+    "                        'h_l_6': (30, 500)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_sparse_feedback = False # silence 80% of feedback weights\n",
+    "nonspiking_mode = True  # Non-spiking mode (real-valued outputs)\n",
+    "use_conductances = True  # use conductances between dendrites and soma\n",
+    "use_broadcast = True  # use broadcast - feedback to all layers from output l\n",
+    "use_spiking_feedback = True  # use spiking feedback\n",
+    "use_spiking_feedforward = True  # use spiking feedforward input\n",
+    "use_symmetric_weights = False  # enforce symmetric weights\n",
+    "noisy_symmetric_weights = False  # add noise to symmetric weights\n",
+    "\n",
+    "\"\"\"\n",
+    "Neurophysiological Hyperparameters\n",
+    "\"\"\"\n",
+    "lambda_max = 0.2*dt  # maximum spike rate (spikes per time step)\n",
+    "\n",
+    "# kernel parameters\n",
+    "tau_s = 3.0  # synaptic time constant\n",
+    "tau_L = 10.0  # leak time constant\n",
+    "\n",
+    "# conductance parameters\n",
+    "g_B = 0.6  # basal conductance\n",
+    "g_A = 0.05 if use_apical_conductance else 0  # apical conductance\n",
+    "g_L = 1.0/tau_L  # leak conductance\n",
+    "g_D = g_B  # dendritic conductance in output layer\n",
+    "\n",
+    "# reversal potential parameters\n",
+    "E_E = 8  # excitation\n",
+    "E_I = -8  # inhibition\n",
+    "\n",
+    "# steady state constants\n",
+    "k_B = g_B/(g_L + g_B + g_A)\n",
+    "k_D = g_D/(g_L + g_D)\n",
+    "k_I = 1.0/(g_L + g_D)\n",
+    "\n",
+    "# weight update constants\n",
+    "P_hidden = 20.0/lambda_max      # hidden layer error signal scaling factor\n",
+    "P_final = 20.0/(lambda_max**2)  # final layer error signal scaling factor"
    ]
   }
  ],
